@@ -2083,6 +2083,16 @@ setParameter( string name, string value ) : void
 
 .. note:: MapServer's OWSRequest supports only single valued parameters.
 
+addParameter( string name, string value ) : void
+    Add a request parameter, even if the parameter key was previousely set.
+    This is useful when multiple parameters with the same key are required.
+    For example
+
+::
+    
+    request.addParameter('SIZE', 'x(100)')
+    request.addParameter('SIZE', 'y(100)')
+
 getName( int index ) : string
     Return the name of the parameter at *index* in the request's array
     of parameter names.
