@@ -1835,6 +1835,16 @@ int setparameter(string name, string value)
 
        $request->setparameter('REQUEST', 'GetMap');
 
+int addparameter(string name, string value)
+    Add a request parameter, even if the parameter key was previousely set.
+    This is useful when multiple parameters with the same key are required.
+    For example :
+    
+    .. code-block:: php
+
+        $request->addparameter('SIZE', 'x(100)');
+        $request->addparameter('SIZE', 'y(100)');
+
 .. index::
    triple: MapScript; PHP; pointObj
 
